[package]
name = "fmodel-decider-rust"
version = "0.2.0"
edition = "2024"
description = "Pure, type-safe, event-driven decision engine with progressive type refinement for event-sourced and state-stored systems"
license = "Apache-2.0"
repository = "https://github.com/fraktalio/fmodel-decider-rust"
keywords = ["event-sourcing", "cqrs", "ddd", "decider", "domain-driven-design"]
categories = ["data-structures", "rust-patterns"]

[features]
default = []
single-threaded = []

[dependencies]
pretty_assertions = "1.4.1"
